docs: align with Java 17